<resources>
    <string name="app_name">Curricula</string>
    <string name="app_description">Student\'s Companion</string>

    <string name="CSE">CSE</string>
    <string name="ECE">ECE</string>
    <string name="DivisionA">Division A</string>
    <string name="DivisionB">Division B</string>

    <string name="NavigationDrawerOpen">Open navigation drawer</string>
    <string name="NavigationDrawerClose">Close navigation drawer</string>

    <string name="AcademicCalendarMenu">Academic Calendar</string>
    <string name="AboutMenu">About</string>
    <string name="TimeTableMenu">Time Table</string>
    <string name="FirstYearSubMenu">I Year</string>
    <string name="SecondYearSubMenu">II Year</string>

    <string name="AboutQuestion">What is Curricula?</string>
    <string name="AboutAnswer">A warehouse for all the engineering related materials for IIIT Surat students. It aims to later become a hub of all the study and course materials, as a result of contributions made by other fellow aspiring engineers.</string>

    <string name="ContributeQuestion">"How to contribute?</string>
    <string name="ContributeAnswer">You can contribute in two ways i.e. by providing us new materials and by forking this project from GitHub and making Pull Request.</string>

    <string name="Developer">Developer</string>
    <string name="AboutDeveloper1">Aditya Jaiswal</string>
    <string name="AboutDeveloper2">Aakash Gavle</string>
    <string name="Designer">Designer</string>
    <string name="AboutDesigner">Krishna Ojha</string>
    <string name="cse_iiit_surat">CSE, IIIT Surat</string>
    <string name="ece_iiit_surat">ECE, IIIT Surat</string>

    <string name="ui_mode">Dark Theme</string>
    <string name="title_activity_academic_calendar">AcademicCalendarActivity</string>
    <string name="menu_academic_calendar">Academic Calendar</string>
    <string name="menu_add_materials">Add Materials</string>
    <string name="menu_github">Github</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_title_contribute">Contribute</string>
    <string name="menu_share_app">Share App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AboutMaintainer">Suraj Sisodia</string>
    <string name="maintainer">Maintainer</string>


    <string-array name="icons">
        <item>@drawable/ic_cp6</item>
    </string-array>

</resources>
